--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-bower-map",
   "description": "Copy Bower dependencies.",
-  "version": "0.1.9",
+  "version": "0.1.2",
   "homepage": "https://github.com/tylerbeck/grunt-bower-map",
   "author": {
     "name": "Tyler Beck",
@@ -27,11 +27,12 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "grunt": "~0.4.5",
     "grunt-bower-install-simple": "^1.0.3",
-    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-bump": "^0.3.0",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-nodeunit": "^0.3.3"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
